# Nhom4-E402-Day07

./: .env.example  phase2_benchmark.py  pyproject.toml  requirements.txt
data/: machine_learning.md
report/: REPORT.md
src/: __init__.py  agent.py  chunking.py  langchain_chunking.py  langchain_embeddings.py  pinecone_store.py  store.py
